--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   <style>
     body {
       background-color: lightgray;
@@ -45,7 +45,7 @@
 <div class="profile">
   <!-- Add your portait image here -->
   <img src="img/profile__portrait.png" class="profile__portrait" alt="Adam Guttman Portrait">
-  <h1>Hello World!</h1>
+  <h1>Hello Worlds!</h1>
   <p>
     My name is Adam Guttman. I am a <span>web</span> developer from New York.
   </p>
