--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="profile">
   <!-- Add your portait image here -->
   <img src="img/profile__portrait.png" class="profile__portrait" alt="Adam Guttman Portrait">
-  <h1>Hello Worlds!</h1>
+  <h1>Hello World!</h1>
   <p>
     My name is Adam Guttman. I am a <span>web</span> developer from New York.
   </p>
