--- a/about.html
+++ b/about.html
@@ -678,6 +678,17 @@
       </tr>
     </tbody>
 </table>
+
+<!-- Footer with links to social media profiles -->
+<footer class="page-footer">
+  <p>Find me on</p>
+  <div class="social-media">
+    <img src="img/github1.svg" alt="Github">
+    <img src="img/twitter1.svg" alt="Twitter">
+    <img src="img/linkedin1.svg" alt="LinkedIn">
+  </div>
+</footer>
+
 <script src="js/tota11y.min.js"></script>
 </body>
 
