--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
   </p>
   <a href="#">Check out some of my code</a>
 </div>
+
 <footer class="page-footer">
-  <p>Find me on</p>
+  <p>Find me ons</p>
   <div class="social-media">
     <img src="img/github1.svg" alt="Github">
     <img src="img/twitter1.svg" alt="Twitter">
     <img src="img/linkedin1.svg" alt="LinkedIn">
   </div>
 </footer>
+
 <script src="js/tota11y.min.js"></script>
 </body>
 
