--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
-
+    <style>
+      body {
+        background-color: lightgray;
+        }
+    </style>
 
 </head>
 
