--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,10 +30,10 @@
               <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
            </li>
            <li role="presentation">
-              <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+              <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
            </li>
            <li role="presentation">
-              <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
+              <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
            </li>
         </ul>
      </nav>
