hyperlinks for footer

--- a/about.html
+++ b/about.html
@@ -652,7 +652,7 @@
         </g>
     </svg>
 
-  <table>
+  <table class="experience">
     <thead>
       <tr>
         <td>Skills</td>
@@ -681,11 +681,17 @@
 
 <!-- Footer with links to social media profiles -->
 <footer class="page-footer">
-  <p>Find me on</p>
+  <p>Find me ons</p>
   <div class="social-media">
-    <img src="img/github1.svg" alt="Github">
-    <img src="img/twitter1.svg" alt="Twitter">
-    <img src="img/linkedin1.svg" alt="LinkedIn">
+    <a href="https://github.com/adamgutt" target="_blank">
+      <img src="img/github1.svg" alt="Github">
+    </a>
+    <a href="https://twitter.com" target="_blank">
+      <img src="img/twitter1.svg" alt="Twitter">
+    </a>
+    <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
+      <img src="img/linkedin1.svg" alt="LinkedIn">
+    </a>
   </div>
 </footer>
 
