--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 <footer class="page-footer">
   <p>Find me ons</p>
   <div class="social-media">
-    <img src="img/github1.svg" alt="Github">
-    <img src="img/twitter1.svg" alt="Twitter">
-    <img src="img/linkedin1.svg" alt="LinkedIn">
+    <a href="https://github.com/adamgutt" target="_blank">
+      <img src="img/github1.svg" alt="Github">
+    </a>
+    <a href="https://twitter.com" target="_blank">
+      <img src="img/twitter1.svg" alt="Twitter">
+    </a>
+    <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
+      <img src="img/linkedin1.svg" alt="LinkedIn">
+    </a>
   </div>
 </footer>
 
