--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 
 
 <body>
+<div class="fullpage">  
   <header class="page-header">
     <!-- Add your logo here -->
     <img src="img/logo.svg" alt="logo" >
@@ -43,7 +44,7 @@
 <div class="myself">
   <h1>About</h1>
     <p>This page is about myself. This is what I enjoy doing:</p>
-    <ul role="abilities" class="about-myself">
+    <ul class="about-myself">
       <li>Front-end development</li>
       <li>Back-end development</li>
       <li>Test driven development</li>
@@ -694,7 +695,7 @@
     </a>
   </div>
 </footer>
-
+</div>
 <script src="js/tota11y.min.js"></script>
 </body>
 
