--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+<div class="fullpage">
   <!-- Header including the logo and the main navigation -->
   <header class="page-header">
      <!-- Add Logo here -->
@@ -38,8 +39,8 @@
         </ul>
      </nav>
   </header>
-
-  <form action="" method="post" id="contact-form">
+<div class="fullcontact">
+  <form action="#" method="post" id="contact-form">
     <label class="standard-label" for="contact-email">E-mail: </label>
     <input type="email" id="contact-email" required>
 
@@ -65,7 +66,7 @@
   <a href="mailto:aviguttman7@gmail.com">Contact me</a>
 
 </div>
-
+</div>
 
 
 <!-- Footer with links to social media profiles -->
@@ -83,6 +84,7 @@
     </a>
   </div>
 </footer>
+</div>
 <script src="js/tota11y.min.js"></script>
 </body>
 
