--- a/work.html
+++ b/work.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+<div class="fullpage";
 
 <!-- Header including the logo and the main navigation -->
 <header class="page-header">
@@ -39,7 +40,7 @@
       </ul>
    </nav>
 </header>
-
+<div class="fullwork">
 <!-- Main content -->
 <section>
    <h1>Work</h1>
@@ -89,6 +90,7 @@
    </div>
   </div>
 </section>
+</div>
 <footer class="page-footer">
   <p>Find me ons</p>
   <div class="social-media">
@@ -103,7 +105,7 @@
     </a>
   </div>
 </footer>
-
+</div>
 <script src="js/tota11y.min.js"></script>
 </body>
 
