--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </style>
 
 </head>
-
 <body>
+<div class="fullpage">
 
 <!-- Header including the logo and the main navigation -->
 <header class="page-header">
@@ -66,7 +66,7 @@
     </a>
   </div>
 </footer>
-
+</div>
 <script src="js/tota11y.min.js"></script>
 </body>
 
