--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 
 <body>
-<div class="fullpage">  
+<div class="fullpage">
   <header class="page-header">
     <!-- Add your logo here -->
     <img src="img/logo.svg" alt="logo" >
@@ -682,7 +682,7 @@
 
 <!-- Footer with links to social media profiles -->
 <footer class="page-footer">
-  <p>Find me ons</p>
+  <p>Find me on</p>
   <div class="social-media">
     <a href="https://github.com/adamgutt" target="_blank">
       <img src="img/github1.svg" alt="Github">
