--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
 <!-- Footer with links to social media profiles -->
 <footer class="page-footer">
-  <p>Find me ons</p>
+  <p>Find me on</p>
   <div class="social-media">
     <a href="https://github.com/adamgutt" target="_blank">
       <img src="img/github1.svg" alt="Github">
