--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 
 <footer class="page-footer">
-  <p>Find me ons</p>
+  <p>Find me on</p>
   <div class="social-media">
     <a href="https://github.com/adamgutt" target="_blank">
       <img src="img/github1.svg" alt="Github">
