--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<div class="fullpage";
+<div class="fullpage">
 
 <!-- Header including the logo and the main navigation -->
 <header class="page-header">
@@ -92,7 +92,7 @@
 </section>
 </div>
 <footer class="page-footer">
-  <p>Find me ons</p>
+  <p>Find me on</p>
   <div class="social-media">
     <a href="https://github.com/adamgutt" target="_blank">
       <img src="img/github1.svg" alt="Github">
