--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <p>
     My name is Adam Guttman. I am a <span>web</span> developer from New York.
   </p>
-  <a href="#">Check out some of my code</a>
+  <a class="checkoutcode" href="#">Check out some of my code</a>
 </div>
 
 <footer class="page-footer">
