--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
               <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
            </li>
            <li role="presentation">
-              <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+              <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
            </li>
            <li role="presentation">
               <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
@@ -61,9 +61,8 @@
   11598 Woodmere<br>
   New York<br>
   <br>
-  Tel <a href="tel:15169659044">15169659044</a><br>
-  <a href="mailto:aviguttman7@gmail.com">aviguttman7@gmail.com</a><br>
-  <a href="mailto:aviguttman7@gmail.com">Contact me</a>
+  <a href="tel:15169659044">Tel:</a> <span> 1-516-954-9044 </span><br>
+  <a href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
 </div>
 </div>
 
