--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
   11598 Woodmere<br>
   New York<br>
   <br>
-  <a href="tel:15169659044">Tel:</a> <span> 1-516-954-9044 </span><br>
-  <a href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
+  <a class="contactinfo" href="tel:15169659044">Tel:</a> <span> 1-516-954-9044 </span><br>
+  <a class="contactinfo" href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
 </div>
 </div>
 
