--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
 <div class="fullwork">
 <!-- Main content -->
 <section>
-   <h1>Work</h1>
+   <h1 class="worktitle">Work</h1>
    <div class="grid">
       <!-- Grid items will live here -->
       <div class="grid__item">
