--- a/work.html
+++ b/work.html
@@ -2,113 +2,122 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Adam Guttman - Work</title>
-    <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-      <style>
-        body {
-          background-color: lightgray;
-        }
-      </style>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Adam Guttman - Work</title>
+   <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
+   <link rel="stylesheet" type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="css/style.production.css">
+   <style>
+      body {
+         background-color: lightgray;
+      }
+   </style>
 
 </head>
 
 <body>
-<div class="fullpage">
+   <div class="fullpage">
 
-<!-- Header including the logo and the main navigation -->
-<header class="page-header">
-   <!-- Add Logo here -->
-   <img src="img/logo.svg" alt="logo" class="page-header__item">
-   <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-         <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-         </li>
-         <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
-         </li>
-         <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-         </li>
-         <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
-         </li>
-      </ul>
-   </nav>
-</header>
+      <!-- Header including the logo and the main navigation -->
+      <header class="page-header">
+         <!-- Add Logo here -->
+         <img src="img/logo.svg" alt="logo" class="page-header__item">
+         <nav class="main-navigation page-header__item">
+            <ul role="menubar" class="navigation-list">
+               <li role="presentation">
+                  <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+               </li>
+               <li role="presentation">
+                  <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
+               </li>
+               <li role="presentation">
+                  <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+               </li>
+               <li role="presentation">
+                  <a href="work.html" role="menuitem"
+                     class="navigation-list__item navigation-list__item--active">Work</a>
+               </li>
+            </ul>
+         </nav>
+      </header>
 
-<div class="fullwork">
-<!-- Main content -->
-<section>
-   <h1 class="worktitle">Work</h1>
-   <div class="grid">
-      <!-- Grid items will live here -->
-      <div class="grid__item">
-      <h2>Mobile web app</h2>
-      <p>
-         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-      </p>
-      <a class="seeon" href="#">See project on GitHub</a>
+      <div class="fullwork">
+         <!-- Main content -->
+         <section>
+            <h1 class="worktitle">Work</h1>
+            <div class="grid">
+               <!-- Grid items will live here -->
+               <div class="grid__item">
+                  <h2>Meet app</h2>
+                  <p>
+                     This app is built using react. It uses AWS Lambda, OAuth2 through Google, and the Google Calendar
+                     API. The purpose of this app is to be able to filter though and show all the events in various
+                     cities from a public google calender.
+                  </p>
+                  <a class="seeon" href="#">See project on GitHub</a>
+               </div>
+               <div class="grid__item">
+                  <h2>Mobile web app</h2>
+                  <p>
+                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                     I've created the HTML and CSS templates.
+                  </p>
+                  <a class="seeon" href="#">See project on GitHub</a>
+               </div>
+               <div class="grid__item">
+                  <h2>Mobile web app</h2>
+                  <p>
+                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                     I've created the HTML and CSS templates.
+                  </p>
+                  <a class="seeon" href="#">See project on GitHub</a>
+               </div>
+               <div class="grid__item">
+                  <h2>Mobile web app</h2>
+                  <p>
+                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                     I've created the HTML and CSS templates.
+                  </p>
+                  <a class="seeon" href="#">See project on GitHub</a>
+               </div>
+               <div class="grid__item">
+                  <h2>Mobile web app</h2>
+                  <p>
+                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                     I've created the HTML and CSS templates.
+                  </p>
+                  <a class="seeon" href="#">See project on GitHub</a>
+               </div>
+               <div class="grid__item">
+                  <h2>Mobile web app</h2>
+                  <p>
+                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
+                     I've created the HTML and CSS templates.
+                  </p>
+                  <a class="seeon" href="#">See project on GitHub</a>
+               </div>
+            </div>
+         </section>
+      </div>
+      <footer class="page-footer">
+         <p>Find me on</p>
+         <div class="social-media">
+            <a href="https://github.com/adamgutt" target="_blank">
+               <img src="img/github1.svg" alt="Github">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+               <img src="img/twitter1.svg" alt="Twitter">
+            </a>
+            <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
+               <img src="img/linkedin1.svg" alt="LinkedIn">
+            </a>
+         </div>
+      </footer>
    </div>
-   <div class="grid__item">
-      <h2>Mobile web app</h2>
-      <p>
-         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-      </p>
-      <a class="seeon" href="#">See project on GitHub</a>
-   </div>
-   <div class="grid__item">
-      <h2>Mobile web app</h2>
-      <p>
-         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-      </p>
-      <a class="seeon" href="#">See project on GitHub</a>
-   </div>
-   <div class="grid__item">
-      <h2>Mobile web app</h2>
-      <p>
-         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-      </p>
-      <a class="seeon" href="#">See project on GitHub</a>
-   </div>
-   <div class="grid__item">
-      <h2>Mobile web app</h2>
-      <p>
-         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-      </p>
-      <a class="seeon" href="#">See project on GitHub</a>
-   </div>
-   <div class="grid__item">
-      <h2>Mobile web app</h2>
-      <p>
-         Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-      </p>
-      <a class="seeon" href="#">See project on GitHub</a>
-   </div>
-  </div>
-</section>
-</div>
-<footer class="page-footer">
-  <p>Find me on</p>
-  <div class="social-media">
-    <a href="https://github.com/adamgutt" target="_blank">
-      <img src="img/github1.svg" alt="Github">
-    </a>
-    <a href="https://twitter.com" target="_blank">
-      <img src="img/twitter1.svg" alt="Twitter">
-    </a>
-    <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
-      <img src="img/linkedin1.svg" alt="LinkedIn">
-    </a>
-  </div>
-</footer>
-</div>
-<script src="js/tota11y.min.js"></script>
+   <script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
