--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
                      API. The purpose of this app is to be able to filter though and show all the events in various
                      cities from a public google calender.
                   </p>
-                  <a class="seeon" href="#">See project on GitHub</a>
+                  <a class="seeon" href="https://github.com/adamgutt/meet">See project on GitHub</a>
                </div>
                <div class="grid__item">
                   <h2>Mobile web app</h2>
