--- a/index.html
+++ b/index.html
@@ -2,74 +2,75 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Adam Guttman - Portfolio</title>
-    <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-      <style>
-        body {
-            background-color: lightgray;
-        }
-      </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Adam Guttman - Portfolio</title>
+  <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <style>
+    body {
+      background-color: lightgray;
+    }
+  </style>
 
 </head>
 
 <body>
 
-<div class="fullpage">
+  <div class="fullpage">
 
-<!-- Header including the logo and the main navigation -->
-<header class="page-header">
+    <!-- Header including the logo and the main navigation -->
+    <header class="page-header">
 
-  <!-- Add your logo here -->
-  <img src="img/logo.svg" alt="logo" class="page-header__item">
-  <nav class="main-navigation page-header__item">
-     <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-           <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-        </li>
-        <li role="presentation">
-           <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
-        </li>
-        <li role="presentation">
-           <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-        </li>
-        <li role="presentation">
-          <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-        </li>
-     </ul>
-  </nav>
+      <!-- Add your logo here -->
+      <img src="img/logo.svg" alt="logo" class="page-header__item">
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+          </li>
+        </ul>
+      </nav>
 
-</header>
-<div class="profile">
-  <!-- Add your portait image here -->
-  <img src="img/profile__portrait.png" class="profile__portrait" alt="Adam Guttman Portrait">
-  <h1>Hello World!</h1>
-  <p>
-    My name is Adam Guttman. I am a <span>web</span> developer from New York.
-  </p>
-  <a class="checkoutcode" href="#">Check out some of my code</a>
-</div>
+    </header>
+    <div class="profile">
+      <!-- Add your portait image here -->
+      <img src="img/profile__portrait.png" class="profile__portrait" alt="Adam Guttman Portrait">
+      <h1>Hello World!</h1>
+      <p>
+        My name is Adam Guttman. I am a <span>web</span> developer from New York.
+      </p>
+      <a class="checkoutcode" href="https://github.com/adamgutt">Check out some of my code</a>
+    </div>
 
-<footer class="page-footer">
-  <p>Find me on</p>
-  <div class="social-media">
-    <a href="https://github.com/adamgutt" target="_blank">
-      <img src="img/github1.svg" alt="Github">
-    </a>
-    <a href="https://twitter.com" target="_blank">
-      <img src="img/twitter1.svg" alt="Twitter">
-    </a>
-    <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
-      <img src="img/linkedin1.svg" alt="LinkedIn">
-    </a>
+    <footer class="page-footer">
+      <p>Find me on</p>
+      <div class="social-media">
+        <a href="https://github.com/adamgutt" target="_blank">
+          <img src="img/github1.svg" alt="Github">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+          <img src="img/twitter1.svg" alt="Twitter">
+        </a>
+        <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
+          <img src="img/linkedin1.svg" alt="LinkedIn">
+        </a>
+      </div>
+    </footer>
   </div>
-</footer>
-</div>
-<script src="js/tota11y.min.js"></script>
+  <script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
