--- a/work.html
+++ b/work.html
@@ -51,7 +51,10 @@
             <div class="grid">
                <!-- Grid items will live here -->
                <div class="grid__item">
-                  <h2>Meet app</h2>
+                  <a href="https://adamgutt.github.io/meet/" target="_blank">
+                     <h2>Meet app</h2>
+                  </a>
+
                   <p>
                      This app is built using react. It uses AWS Lambda, OAuth2 through Google, and the Google Calendar
                      API. The purpose of this app is to be able to filter though and show all the events in various
