--- a/work.html
+++ b/work.html
@@ -54,7 +54,6 @@
                   <a href="https://adamgutt.github.io/meet/" target="_blank">
                      <h2>Meet app</h2>
                   </a>
-
                   <p>
                      This app is built using react. It uses AWS Lambda, OAuth2 through Google, and the Google Calendar
                      API. The purpose of this app is to be able to filter though and show all the events in various
@@ -63,20 +62,23 @@
                   <a class="seeon" href="https://github.com/adamgutt/meet">See project on GitHub</a>
                </div>
                <div class="grid__item">
-                  <h2>Mobile web app</h2>
+                  <h2>Chat App</h2>
                   <p>
-                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                     I've created the HTML and CSS templates.
+                     This app is built using Built using React Native, Gifted Chat, and Firebase. The app allows you to
+                     send messages, images from your gallery, take and send photos, and share your location. The data is
+                     stored in Firebase and locally using AsyncStorage.
                   </p>
-                  <a class="seeon" href="#">See project on GitHub</a>
+                  <a class="seeon" href="https://github.com/adamgutt/chat-app">See project on GitHub</a>
                </div>
                <div class="grid__item">
-                  <h2>Mobile web app</h2>
+                  <a href="https://adamgutt.github.io/to-do-list/" target="_blank">
+                     <h2>To Do List</h2>
+                  </a>
                   <p>
-                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                     I've created the HTML and CSS templates.
+                     This app is built with just html, css, and Javascript. This app allows you to add and remove items
+                     off of a To-do List.
                   </p>
-                  <a class="seeon" href="#">See project on GitHub</a>
+                  <a class="seeon" href="https://github.com/adamgutt/to-do-list">See project on GitHub</a>
                </div>
                <div class="grid__item">
                   <h2>Mobile web app</h2>
