--- a/work.html
+++ b/work.html
@@ -75,26 +75,28 @@
                      <h2>To Do List</h2>
                   </a>
                   <p>
-                     This app is built with just html, css, and Javascript. This app allows you to add and remove items
+                     This app was built with html, css, and Javascript. This app allows you to add and remove items
                      off of a To-do List.
                   </p>
                   <a class="seeon" href="https://github.com/adamgutt/to-do-list">See project on GitHub</a>
                </div>
                <div class="grid__item">
-                  <h2>Mobile web app</h2>
+                  <a href="https://adamgutt.github.io/simple-js-app/" target="_blank">
+                     <h2>Pokedex App</h2>
+                  </a>
                   <p>
-                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                     I've created the HTML and CSS templates.
+                     This app was built with html, css, and Javascript. This app allows you to sort through data from a
+                     Pokemon API to see details about specific Pokemons.
                   </p>
-                  <a class="seeon" href="#">See project on GitHub</a>
+                  <a class="seeon" href="https://github.com/adamgutt/simple-js-app">See project on GitHub</a>
                </div>
                <div class="grid__item">
-                  <h2>Mobile web app</h2>
+                  <h2>MyFlix Movie App</h2>
                   <p>
-                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                     I've created the HTML and CSS templates.
+                     This app was built by me from both the client side and the server side. The front end is built
+                     using React and Bootstrap. I also created the API and movie databse myself.
                   </p>
-                  <a class="seeon" href="#">See project on GitHub</a>
+                  <a class="seeon" href="https://github.com/adamgutt/myFlix-client">See project on GitHub</a>
                </div>
                <div class="grid__item">
                   <h2>Mobile web app</h2>
