--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <img src="img/profile__portrait.png" class="profile__portrait" alt="Adam Guttman Portrait">
       <h1>Hello World!</h1>
       <p>
-        My name is Adam Guttman. I am a <span>web</span> developer from New York.
+        My name is Adam Guttman. I am a Full-Stack Web Developer living in New York. You can see some of my work here.
       </p>
-      <a class="checkoutcode" href="https://github.com/adamgutt">Check out some of my code</a>
+      <a class="checkoutcode" href="https://github.com/adamgutt">Check out some of my code!</a>
     </div>
 
     <footer class="page-footer">
