updated shortcut icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Adam Guttman - Portfolio</title>
-  <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
+  <link rel="shortcut icon" href="img/logo.svg">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -48,7 +48,6 @@
     <div class="profile">
       <!-- Add your portait image here -->
       <img src="img/profile__portrait.png" class="profile__portrait" alt="Adam Guttman Portrait">
-      <h1>Hello World!</h1>
       <p>
         My name is Adam Guttman. I am a Full-Stack Web Developer living in New York. You can see some of my work here.
       </p>
