--- a/contact.html
+++ b/contact.html
@@ -2,88 +2,91 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact Adam Guttman</title>
-    <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-      <style>
-        body {
-            background-color: lightgray;
-        }
-      </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact Adam Guttman</title>
+  <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <style>
+    body {
+      background-color: lightgray;
+    }
+  </style>
 
 </head>
+
 <body>
-<div class="fullpage">
-  <!-- Header including the logo and the main navigation -->
-  <header class="page-header">
-     <!-- Add Logo here -->
-     <img src="img/logo.svg" alt="logo" class="page-header__item">
-     <nav class="main-navigation page-header__item">
+  <div class="fullpage">
+    <!-- Header including the logo and the main navigation -->
+    <header class="page-header">
+      <!-- Add Logo here -->
+      <img src="img/logo.svg" alt="logo" class="page-header__item">
+      <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
-           <li role="presentation">
-              <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-           </li>
-           <li role="presentation">
-              <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
-           </li>
-           <li role="presentation">
-              <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
-           </li>
-           <li role="presentation">
-              <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-           </li>
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="navigation-list__item">About me</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem"
+              class="navigation-list__item navigation-list__item--active">Contact</a>
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+          </li>
         </ul>
-     </nav>
-  </header>
-<div class="fullcontact">
-  <form action="#" method="post" id="contact-form">
-    <label class="standard-label" for="contact-email">E-mail: </label>
-    <input type="email" id="contact-email" required>
+      </nav>
+    </header>
+    <div class="fullcontact">
+      <form action="#" method="post" id="contact-form">
+        <label class="standard-label" for="contact-email">E-mail: </label>
+        <input type="email" id="contact-email" required>
 
-    <label class="standard-label" for="contact-telephone">Telephone: </label>
-    <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" required>
+        <label class="standard-label" for="contact-telephone">Telephone: </label>
+        <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" required>
 
-    <label class="standard-label" for="contact-message">Message: </label>
-    <textarea maxlength="240" id="contact-message" required></textarea>
+        <label class="standard-label" for="contact-message">Message: </label>
+        <textarea maxlength="240" id="contact-message" required></textarea>
 
-    <input type="submit" value="Send message">
-  </form>
+        <input type="submit" value="Send message">
+      </form>
 
-<h1>Contact Me</h1>
+      <h1>Contact Me</h1>
 
-<div>
-  Adam Guttman<br>
-  123 Oak Ave <br>
-  11598 Woodmere<br>
-  New York<br>
-  <br>
-  <a class="contactinfo" href="tel:15169659044">Tel:</a> <span> 1-516-954-9044 </span><br>
-  <a class="contactinfo" href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
-</div>
-</div>
+      <div>
+        Adam Guttman<br>
+        414 Oak Ave <br>
+        11516 Cedarhurst<br>
+        New York<br>
+        <br>
+        <a class="contactinfo" href="tel:15169659044">Tel:</a> <span> 1-516-965-9044 </span><br>
+        <a class="contactinfo" href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
+      </div>
+    </div>
 
 
-<!-- Footer with links to social media profiles -->
-<footer class="page-footer">
-  <p>Find me on</p>
-  <div class="social-media">
-    <a href="https://github.com/adamgutt" target="_blank">
-      <img src="img/github1.svg" alt="Github">
-    </a>
-    <a href="https://twitter.com" target="_blank">
-      <img src="img/twitter1.svg" alt="Twitter">
-    </a>
-    <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
-      <img src="img/linkedin1.svg" alt="LinkedIn">
-    </a>
+    <!-- Footer with links to social media profiles -->
+    <footer class="page-footer">
+      <p>Find me on</p>
+      <div class="social-media">
+        <a href="https://github.com/adamgutt" target="_blank">
+          <img src="img/github1.svg" alt="Github">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+          <img src="img/twitter1.svg" alt="Twitter">
+        </a>
+        <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
+          <img src="img/linkedin1.svg" alt="LinkedIn">
+        </a>
+      </div>
+    </footer>
   </div>
-</footer>
-</div>
-<script src="js/tota11y.min.js"></script>
+  <script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
