--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
     <div class="myself">
       <!-- <h1>About</h1> -->
-      <h1>My web development skills:</h1>
+      <h1>My web development skills</h1>
       <ul class="about-myself">
         <li>Front-end development</li>
         <li>Back-end development</li>
@@ -1382,34 +1382,6 @@
         </path>
       </g>
     </svg>
-    <br>
-    <br>
-    <table class="experience">
-      <thead>
-        <tr>
-          <td>Skills</td>
-          <td>Years of Experience</td>
-          <td>Level of Expertise</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>0</td>
-          <td>Beginner</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>0</td>
-          <td>Beginner</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>0</td>
-          <td>Beginner</td>
-        </tr>
-      </tbody>
-    </table>
     <br>
 
     <!-- Footer with links to social media profiles -->
