--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="css/style.production.css">
+   <link rel="stylesheet" type="text/css" href="css/styles.css">
    <style>
       body {
          background-color: lightgray;
@@ -44,71 +44,69 @@
          </nav>
       </header>
 
-      <div class="fullwork">
-         <!-- Main content -->
-         <section>
-            <h1 class="worktitle">Work</h1>
-            <div class="grid">
-               <!-- Grid items will live here -->
-               <div class="grid__item">
-                  <a href="https://adamgutt.github.io/meet/" target="_blank">
-                     <h2>Meet app</h2>
-                  </a>
-                  <p>
-                     This app is built using react. It uses AWS Lambda, OAuth2 through Google, and the Google Calendar
-                     API. The purpose of this app is to be able to filter though and show all the events in various
-                     cities from a public google calender.
-                  </p>
-                  <a class="seeon" href="https://github.com/adamgutt/meet">See project on GitHub</a>
-               </div>
-               <div class="grid__item">
-                  <h2>Chat App</h2>
-                  <p>
-                     This app is built using Built using React Native, Gifted Chat, and Firebase. The app allows you to
-                     send messages, images from your gallery, take and send photos, and share your location. The data is
-                     stored in Firebase and locally using AsyncStorage.
-                  </p>
-                  <a class="seeon" href="https://github.com/adamgutt/chat-app">See project on GitHub</a>
-               </div>
-               <div class="grid__item">
-                  <a href="https://adamgutt.github.io/to-do-list/" target="_blank">
-                     <h2>To Do List</h2>
-                  </a>
-                  <p>
-                     This app was built with html, css, and Javascript. This app allows you to add and remove items
-                     off of a To-do List.
-                  </p>
-                  <a class="seeon" href="https://github.com/adamgutt/to-do-list">See project on GitHub</a>
-               </div>
-               <div class="grid__item">
-                  <a href="https://adamgutt.github.io/simple-js-app/" target="_blank">
-                     <h2>Pokedex App</h2>
-                  </a>
-                  <p>
-                     This app was built with html, css, and Javascript. This app allows you to sort through data from a
-                     Pokemon API to see details about specific Pokemons.
-                  </p>
-                  <a class="seeon" href="https://github.com/adamgutt/simple-js-app">See project on GitHub</a>
-               </div>
-               <div class="grid__item">
-                  <h2>MyFlix Movie App</h2>
-                  <p>
-                     This app was built by me from both the client side and the server side. The front end is built
-                     using React and Bootstrap. I also created the API and movie databse myself.
-                  </p>
-                  <a class="seeon" href="https://github.com/adamgutt/myFlix-client">See project on GitHub</a>
-               </div>
-               <div class="grid__item">
-                  <h2>Mobile web app</h2>
-                  <p>
-                     Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                     I've created the HTML and CSS templates.
-                  </p>
-                  <a class="seeon" href="#">See project on GitHub</a>
-               </div>
+      <main class="main__content--work">
+         <h1>Work</h1>
+         <div class="work__content--grid">
+            <div class="porfolio__grid__item">
+               <h2>Meet App</h2>
+               <img src="img/meet_image.png" alt="meet" />
+               <p>
+                  This app is built using react. It uses AWS Lambda, OAuth2 through Google, and the Google Calendar API.
+                  The purpose of this app is to be able to filter though and show all the events in various cities from
+                  a public google calender.
+               </p>
+               <a href="https://github.com/adamgutt/meet" target="_blank">See project on GitHub</a></br>
+               <a href="https://adamgutt.github.io/meet/" target="_blank">Link to the live App</a>
             </div>
-         </section>
-      </div>
+
+            <div class="porfolio__grid__item">
+               <h2>Pokedex</h2>
+               <img src="img/pokedex_image.png" alt="pokedex" />
+               <p>
+                  This app was built with html, css, and Javascript. This app allows you to sort through data from a
+                  Pokemon API to see details about specific Pokemons.
+               </p>
+               <a href="https://github.com/adamgutt/to-do-list" target="_blank">See project on GitHub</a></br>
+               <a href="https://adamgutt.github.io/simple-js-app/" target="_blank">Link to the live App</a>
+            </div>
+
+            <div class="porfolio__grid__item">
+               <h2>MyFlix App</h2>
+               <img src="img/myflix_image.png" alt="myflix" />
+               <p>
+                  This app was built by me from both the client side and the server side. The front end is built using
+                  React and Bootstrap. I also created the API and movie databse myself.
+               </p>
+               <a href="https://github.com/adamgutt/myFlix-client" target="_blank">See project on GitHub</a></br>
+               <a href="#" target="_blank">Link to the live App</a>
+            </div>
+
+            <div class="porfolio__grid__item">
+               <h2>MyFlix-Angular</h2>
+               <img src="img/myflixangular_image.png" alt="myflix-angular" />
+               <p>
+                  The aim of this project is to build the client-side for an application called myFlix using Angular
+                  based on its existing server-side code (REST API and database), with supporting documentation.
+               </p>
+               <a href="https://github.com/adamgutt/myFlix-Angular-client" target="_blank">See project on
+                  GitHub</a></br>
+               <a href="#" target="_blank">Link to the live
+                  App</a>
+            </div>
+
+            <div class="porfolio__grid__item">
+               <h2>Chat app</h2>
+               <img src="img/chat_image.png" alt="chat" />
+               <p>
+                  This app is built using Built using React Native, Gifted Chat, and Firebase. The app allows you to
+                  send messages, images from your gallery, take and send photos, and share your location. The data is
+                  stored in Firebase and locally using AsyncStorage.
+               </p>
+               <a href="https://github.com/adamgutt/chat-app" target="_blank">See project on GitHub</a>
+            </div>
+         </div>
+      </main>
+
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
