--- a/work.html
+++ b/work.html
@@ -78,7 +78,7 @@
                   React and Bootstrap. I also created the API and movie databse myself.
                </p>
                <a href="https://github.com/adamgutt/myFlix-client" target="_blank">See project on GitHub</a></br>
-               <a href="#" target="_blank">Link to the live App</a>
+               <a href="https://adamsmyflix.netlify.app" target="_blank">Link to the live App</a>
             </div>
 
             <div class="porfolio__grid__item">
