fixed footer issues

--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <style>
     body {
-      background-color: lightgray;
+      background-color: rgb(226, 251, 255);
     }
   </style>
 
@@ -42,7 +42,23 @@
         </ul>
       </nav>
     </header>
-    <div class="fullcontact">
+
+
+    <div class="personal-details">
+      <h1>Contact Me</h1>
+
+
+      Adam Guttman<br>
+      414 Oak Ave <br>
+      11516 Cedarhurst<br>
+      New York<br>
+      <br>
+      <a class="contactinfo" href="tel:15169659044">Tel:</a> <span> 1-516-965-9044 </span><br>
+      <a class="contactinfo" href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
+    </div>
+
+    <br>
+    <div class="message-box">
       <form action="#" method="post" id="contact-form">
         <label class="standard-label" for="contact-email">E-mail: </label>
         <input type="email" id="contact-email" required>
@@ -55,19 +71,8 @@
 
         <input type="submit" value="Send message">
       </form>
-
-      <h1>Contact Me</h1>
-
-      <div>
-        Adam Guttman<br>
-        414 Oak Ave <br>
-        11516 Cedarhurst<br>
-        New York<br>
-        <br>
-        <a class="contactinfo" href="tel:15169659044">Tel:</a> <span> 1-516-965-9044 </span><br>
-        <a class="contactinfo" href="mailto:aviguttman7@gmail.com">Email:</a><span> aviguttman7@gmail.com </span> <br>
-      </div>
     </div>
+
 
 
     <!-- Footer with links to social media profiles -->
@@ -76,9 +81,6 @@
       <div class="social-media">
         <a href="https://github.com/adamgutt" target="_blank">
           <img src="img/github1.svg" alt="Github">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-          <img src="img/twitter1.svg" alt="Twitter">
         </a>
         <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
           <img src="img/linkedin1.svg" alt="LinkedIn">
