--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <style>
     body {
-      background-color: lightgray;
+      background-color: rgb(226, 251, 255);
     }
   </style>
 
@@ -59,9 +59,6 @@
       <div class="social-media">
         <a href="https://github.com/adamgutt" target="_blank">
           <img src="img/github1.svg" alt="Github">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-          <img src="img/twitter1.svg" alt="Twitter">
         </a>
         <a href="https://www.linkedin.com/in/adam-guttman-52492418a/" target="_blank">
           <img src="img/linkedin1.svg" alt="LinkedIn">
