fixed footer and updated font colors

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
     <div class="myself">
       <!-- <h1>About</h1> -->
-      <h1>My web development skills</h1>
+      <h1>Web Development Skills</h1>
       <ul class="about-myself">
         <li>Front-end development</li>
         <li>Back-end development</li>
