updated grid styling

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
                <a href="https://adamsmyflix.netlify.app" target="_blank">Link to the live App</a>
             </div>
 
-            <div class="porfolio__grid__item">
+            <!-- <div class="porfolio__grid__item">
                <h2>MyFlix-Angular</h2>
                <img src="img/myflixangular_image.png" alt="myflix-angular" />
                <p>
@@ -92,7 +92,7 @@
                   GitHub</a></br>
                <a href="#" target="_blank">Link to the live
                   App</a>
-            </div>
+            </div> -->
 
             <div class="porfolio__grid__item">
                <h2>Chat app</h2>
