--- a/work.html
+++ b/work.html
@@ -95,7 +95,7 @@
             </div> -->
 
             <div class="porfolio__grid__item">
-               <h2>Chat app</h2>
+               <h2>Chat App</h2>
                <img src="img/chat_image.png" alt="chat" />
                <p>
                   This app is built using Built using React Native, Gifted Chat, and Firebase. The app allows you to
